# MizzouNewsCrawler

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile.crawler  Dockerfile.processor  PROXY_TESTING_README.md  README.md  UNBLOCK_PROXY_IMPLEMENTATION.md  backfill_log_20251127_104614.txt  check_kmiz_ids.py  check_kmiz_wire.py  delete_paywall_from_bigquery.py  export_wire_sample.py  extract_missing_sources.py  labeled_to_wire_candidates_20251127_110203.csv  mediacloud_wire_hits_20251207.tsv  paywall_articles.csv  pyproject.toml  query_labeled_wire.py  requirements-base.txt  requirements-crawler.txt  requirements-ml.txt  requirements-processor.txt  requirements.txt  sitecustomize.py  wire_articles_sample.csv  wire_backfill_labeled_20251127_111238.csv  wire_backfill_labeled_20251127_181457.csv  wire_backfill_labeled_20251127_181457_no_content.csv  wire_backfill_output_20251127_111401.txt  wire_services_patterns.csv
.github/: CI_SMOKE_TESTS_MAIN_ONLY.md  copilot-instructions.md
.github/workflows/: build-and-deploy-services.yml  ci.yml
alembic/: env.py
alembic/versions/: 146ea14c7cf2_add_article_entities_composite_index.py  1da1c56c201f_add_discovery_proxy_to_sources.py  305f6389a934_add_extraction_method_to_sources.py  43a60f360933_add_e_edition_url_path_filters.py  49b6413f96cf_merge_disable_autoanalyze_and_wire_check.py  88f8f020d888_add_talker_news_and_daypop_wire_patterns.py  995983225474_disable_autoanalyze_for_article_entities.py  a323ff14aed4_add_stateline_wire_service_patterns.py  c9d0e1f2a3b4_add_repub_url_pattern.py  e5b6c7d8e9fa_add_wire_check_columns.py  ebac28990451_add_url_path_filters_table.py  i2j3k4l5m6n7_add_bot_protection_type.py
backend/app/: lifecycle.py  main.py
docs/: ARGO_DEPLOYMENT_PLAN.md  AUTOMATED_DEPLOYMENT.md  BRANCH_PROTECTION.md  PROXY_CONFIGURATION.md  PROXY_CONFIGURATION_CRITICAL.md  PROXY_DIAGNOSTICS.md
docs/archive/: MANUAL_WORKFLOW_ISSUE.md
docs/features/: DECODO_PROXY_INTEGRATION.md  ISSUE_66_IMPLEMENTATION.md
exports/: articles_extracted_20251205.csv  articles_extracted_20251205_media_cloud.csv  articles_extracted_20251205_media_cloud_matches.csv  articles_extracted_20251205_media_cloud_results.csv  articles_status_wire_obit_opinion_20251201_20251202.csv  benchmark_mcmetadata_20251205.csv  benchmark_mcmetadata_20251205_offset51.csv  mediacloud_backfill_payload.b64  mediacloud_backfill_payload.json
gcp/cloudbuild/: cloudbuild.yaml
k8s/: lehigh-extraction-job.yaml  mizzou-discovery-job.yaml  mizzou-extraction-job.yaml  processor-cronjob.yaml  processor-deployment.yaml  test-extraction-pod.yaml  versions.env
k8s/argo/: base-pipeline-workflow.yaml
k8s/lab/: processor-deployment.yaml
k8s/templates/: dataset-discovery-job.yaml  dataset-extraction-job.yaml
k8s/tests/: extraction-test2.yaml
orchestration/: continuous_processor.py
scripts/: add_backfill_sources.py  add_section_urls.py  apply_wire_backfill.py  backfill_wire_detection.py  backfill_wire_detection_cloudsql.py  benchmark_extractors.py  calculate-extraction-parallelism.py  calculate_extraction_parallelism.py  create-decodo-proxy-secret.sh  create-proxy-secret.sh  create-unblock-secret.sh  deploy-services.sh  deploy-unblock-feature.sh  diagnose_proxy.py  dry_run_labeled_wire_backfill.py  dry_run_labeled_wire_check.py  export_discovery_status_report.py  fast_wire_backfill_labeled.py  fix_wire_detection_bug.py  grant-github-actions-permissions.sh  keep_extraction_running.sh  labeled_wire_backfill.py  launch_dataset_job.py  mark_articles_as_wire.py  mark_articles_wire.py  mark_proxy_challenges_as_error.py  migrate_hardcoded_patterns.py  remove_proxy_challenges_from_bigquery.sql  run_mediacloud_headline_check.py  setup-lab-namespace.sh  submit-pipeline-with-autoscale.sh  sync-decodo-credentials.sh  test-ci-locally.sh  test_job_launcher.sh  update-versions-env.sh  update_nexstar_to_unblock.sql  wire_backfill_batch.py  wire_backfill_labeled_articles.py  wire_backfill_production.py
src/cli/: cli_modular.py
src/crawler/: __init__.py  discovery.py  origin_proxy.py  proxy_config.py  scheduling.py  source_processing.py  utils.py
src/mcmetadata/: __init__.py  content.py  dates.py  languages.py  structured_data.py  titles.py  urls.py  webpages.py
src/models/: __init__.py
src/pipeline/: url_filters.py
src/services/: url_verification.py  url_verification_service.py
src/utils/: bot_sensitivity_manager.py  byline_cleaner.py  comprehensive_telemetry.py  content_cleaner_balanced.py  content_type_detector.py  url_classifier.py
tests/: conftest.py  test_argo_workflows.py  test_cli_modular.py  test_content_extractor_rate_limit.py  test_continuous_processor.py  test_deployment_requirements.py  test_entity_extraction_command.py  test_extraction_command.py  test_extraction_loop_resilience.py  test_extraction_methods.py  test_http_error_handling.py  test_launch_dataset_job.py  test_pause_on_403.py  test_paused_source_exclusion.py  test_proxy_challenge_handling.py  test_scheduling.py  test_selenium_only_feature.py  test_squid_only_proxy.py  test_sync_decodo_credentials.py  test_telemetry_system.py  test_unblock_proxy_extraction.py  test_url_filters_fixes.py
tests/backend/: test_crawler_http_errors.py  test_lifecycle.py
tests/cli/: test_cli_modular.py  test_cli_smoke.py  test_extract_cli_args.py  test_proxy_cli_masking.py  test_proxy_cli_status_masking.py
tests/crawler/: test_cms_metadata_extraction.py  test_discovery_coverage.py  test_discovery_helpers.py  test_discovery_sqlite_compat.py  test_origin_proxy_masking.py  test_scheduling.py  (+6 more)
(+38 files in other folders)
